--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,11 @@ body {
     position: absolute;
     z-index: 3;
 }
+
+/* penguin styling */
+.penguin{
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    margin-top: 75px;
+}
