--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255));
     position: absolute;
     z-index: 3;
+    margin-top: 100px;
 }
 
 /* penguin styling */
@@ -29,4 +30,15 @@ body {
     width: 300px;
     margin: auto;
     margin-top: 75px;
+}
+
+/* left mountain styling */
+.left-mountain{
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background: linear-gradient(rgb(203, 241, 228), rgb(80, 183, 255));
+    transform: skew(0deg, 44deg);
+    z-index: 2;
+    margin-top: -58px;
 }
