--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,15 @@ body {
     z-index: 2;
     margin-top: -58px;
 }
+
+/* bacck mountain styling */
+.back-mountain{
+    width: 300px;
+    height: 300px;
+    background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
+    position: absolute;
+    z-index: 1;
+    transform: rotate(45deg);
+    left: 110px;
+    top: 225px;
+}
