--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,16 @@ body {
     width: 300px;
     margin: auto;
     margin-top: 75px;
+    z-index: 4;
+    position: relative;
+}
+
+/* penguin head styling */
+.penguin-head{
+    height: 45%;
+    width: 50%;
+    background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+    border-radius: 70% 70% 65% 65%;
 }
 
 /* left mountain styling */
