--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,37 @@ body {
     width: 50%;
     background: linear-gradient(45deg, gray, rgb(239, 240, 228));
     border-radius: 70% 70% 65% 65%;
+    top: 10%;
+    left: 25%;
+    z-index: 1;
 }
 
 /* penguin body styling */
 .penguin-body{
-    width: 53%;
-    height: 45%;
+    width: 55%;
+    height: 50%;
     background: linear-gradient(45deg, rgb(134, 133, 133) 0%, rgb(234, 231, 231) 25%, white 67%);
     border-radius: 80% 80% 100% 100%;
+    top: 40%;
+    left: 22.5%;
+}
+
+/* penguin-child elements styling */
+.penguin *{
+    position: absolute;
+}
+
+/* penguin chest */
+.penguin-body::before {
+    content: "";
+    position: absolute;
+    height: 45%;
+    width: inherit;
+    background-color: gray;
+    top: 10%;
+    left: 23%;
+    border-radius: 0% 0% 100% 100%;
+    opacity: 70%;
 }
 
 /* left mountain styling */
