--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 /** DOCUMENT STYLINGS **/
 
+/* root selector */
+:root{
+    --penguin-face: white;
+}
 
 /* background styling */
 
@@ -58,7 +62,7 @@ body {
 .face {
     width: 60%;
     height: 70%;
-    background-color: white;
+    background-color: var(--penguin-face);
     border-radius: 70% 70% 60% 60%;
     top: 15%;
 }
@@ -70,6 +74,16 @@ body {
 
 .face.right{
     right: 5%;
+}
+
+/* chin styling */
+.chin {
+    height: 70%;
+    width: 90%;
+    background-color: var(--penguin-face);
+    top: 25%;
+    left: 5%;
+    border-radius: 70% 70% 100% 100%;
 }
 
 /** THE PENGUIN BODY **/
