--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,24 @@ body {
     opacity: 70%;
 }
 
+/* stylings for the shirt */
+.shirt{
+    /* font-size: 25px;
+    font-family: Helvetica, sans-serif;
+    font-weight: bold; */
+    font: bold 25px Helvetica, sans-serif;
+    top: 180px;
+    left: 127.5px;
+    z-index: 1;
+    color: #6a6969;
+}
+
+.shirt div{
+    font-weight: initial;
+    top: 22.5px;
+    left: 12px;
+}
+
 /** THE MOUNTAIN **/
 
 /* left mountain styling */
@@ -229,3 +247,5 @@ body {
     top: -75px;
     right: -75px;
 }
+
+/* END !!! */
