--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ body {
     background-color: var(--background-col);
     top: 45%;
     border-radius: 50%;
+    animation: close-eyes 10s ease-in-out linear;
 }
 
 .iris.left{
@@ -229,6 +230,7 @@ body {
     left: 5%;
     transform: rotate(130deg) scaleX(var(--neg-value));
     transform-origin: 0% 0%;
+    animation: wave 5s infinite linear;
 }
 
 .arm.right {
@@ -291,6 +293,36 @@ body {
     position: absolute;
     top: -75px;
     right: -75px;
+}
+
+
+/** TRANSITIONS **/
+@keyframes wave {
+    10% {
+        transform: rotate(110deg) scaleX(var(--neg-value));
+      }
+      20% {
+        transform: rotate(130deg) scaleX(var(--neg-value));
+      }
+      30% {
+        transform: rotate(110deg) scaleX(var(--neg-value));
+      }
+      40% {
+        transform: rotate(130deg) scaleX(var(--neg-value));
+      }
+}
+
+@keyframes close-eyes {
+    0%{
+        transform: skew(0deg, 180deg);
+        width: 25%;
+        height: 27%;
+    }
+    100%{
+        transform: skew(0deg, 180deg);
+        width: 35%;
+        height: 2%;
+    }    
 }
 
 /* END !!! */
